--- a/code/configs/crack500/crack500_wsplin.yaml
+++ b/code/configs/crack500/crack500_wsplin.yaml
@@ -2,6 +2,7 @@ AUG:
   SEPARATE: true
   NORM: [[0.5,0.5,0.5],[0.5,0.5,0.5]]
   NO_AUG: false
+
 DATA:
   DATALOADER_NAME: torch_patch_pict
   IMG_SIZE: [900,1200]
@@ -12,10 +13,10 @@ DATA:
   TRAIN_SPLIT: all
 
 TRAIN:
+  EPOCHS: 10
   LR_BS_SCALE: 0
   WEIGHT_DECAY: 1.0e-5
   BASE_LR: 8.0e-4
-  EPOCHS: 30
   OPTIMIZER:
     NAME: sgd
 
@@ -26,14 +27,14 @@ TEST:
   BINARY_MODE: false
   BEST_MODEL_METRIC: ['main','auc']
   K_FOLD_VAL_ENABLE: true
+  K_FOLD_VAL_ALL: 2
+  K_FOLD_VAL_TIMES: 5
   
 MODEL:
-  RESUME: wsplin_effi_b3_bin_main_btml.pth
-  FINETUNE: true
   NUM_CLASSES: 2
   NAME: wsplin
   BACKBONE: tf_efficientnet_b3
   PRETRAINED: false
   NUM_CLASSES: 2
-
+  
 TRAIN_MODE: t_e
